# langgraph-ogar

./: .gitignore  README.md  SETUP.md  TODO.md  environment.yml  pyproject.toml
archive/conversation_engine/: README.md
archive/examples/: demo_plan_framework.py  demo_planner_agent.py  demo_render_from_graph.py  demo_sketch_to_score.py  demo_twinkle.py  demo_twinkle_multipart.py  demo_uc1_decomposition.py  framework_demo.py
archive/framework/: __init__.py
archive/intent/: __init__.py  compiler.py  compiler_interface.py  planner.py
archive/llmops/: predeployment_summary.md
archive/ogar/: __init__.py
archive/project_planner/: __init__.py
archive/symbolic_music/: __init__.py
archive/tests/: conftest.py  test_adapter.py  test_domain.py
design/: WHITEBOARD_ONTOLOGY.md
docs/: CHECKLIST.csv  LANGGRAPH_TUTORIAL.md  agent_testbed_architecture.md  llm-human-efficiency.md  synthetic_wildfire_dataset.md  wildfire_simulation_spec.md
docs/capstone/: PLANNER_DESIGN.md  SESSION_PROGRESS.md  SIDECARS_SPEC.md
docs/design/: world-state-engine-session.md
docs/symbolic-music/: LANGGRAPH_COMPONENTS.md  LANGGRAPH_USE_CASES.md  PLAN_FRAMEWORK.md  PROJECT.md  persistence_data_layer.md  schema_mapping.md
docs/tutorial/: 01-world-engine-basics.md  (+3 more)
examples/: chat_with_openai.py  demo_render_from_graph.py  demo_sketch_to_score.py  demo_twinkle.py  demo_twinkle_multipart.py  demo_uc2_book.py  hello_world.py  pipeline_demo.py  run_with_openai.py  wildfire_demo.py
llmops/: predeployment.md
notebooks/: pipeline_demo.ipynb
tests/: __init__.py  conftest.py  test_config.py
(+550 files in other folders)
